# onera_468_crm_wall_distribution_regression_challenge_v2

./: #README.md#  .gitignore  CFSE.Charbonnier.WBNP.ae2.75deg.Structured.README  README.md  block_family_mapping.txt  cgns_structure.txt  copy.ipynb  data_exploration_clean.ipynb  data_exploration_clean2.ipynb  data_exploration_splitv2_v2.ipynb  exploration.py  important_notes.txt  inspect_gns.py  main.py  plot_scatter3D_density_field_221.py  plot_scatter3D_density_field_33.py  plotsave_density_field_221.py  plotsave_density_field_33.py  pyproject.toml  pyt.py  rho_distribution.ipynb  test_local.sh  train.py  verif_cohernece.py
VISU_SELECTION_GLOBAL-MLP/: config.yaml  script_01_write_slice_noplot_v3.py  script_02_plots_slices_cpcf_v3.py  script_03_diffvar_scatter3D.py  script_04_scatter3Dandslices_vincent.py
bundle/: competition.yaml
bundle/ingestion_program/: ingestion.py  metadata.yaml
bundle/pages/: data.md  evaluation-38956.md  evaluation.md  extra_packages.md  overview.md  terms.md
bundle/scoring_program/: metadata.yaml  scoring.py
bundle/solution/: model.py
bundle/starting_kit/using_extra_packages/codalab-env/: pyproject.toml
logs/: 353381.err
solution/: model.py
utils/: base_models.py  convert_npy_to_pandas.py  dataset_description.py  exploration.py  fastwavelet.py  gp_pod_model.py  gradient.py  klw_boosting.py  mlp_explanation.md  mlp_kl_wrmae_gap.py  plane_segmentation.py  plane_visualization.py  plot_gap_examples.py  prepare_codabench_data.py  sbatch.sh  sbatchh100.sh  sbatchram.sh  train.py  train_mlp_with_kl.py  wavelet.md  wavelets.py
(+36 files in other folders)
