[project]
name = "codalab-env"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "contourpy==1.3.3",
    "cycler==0.12.1",
    "cython==3.0.12",
    "fonttools==4.62.1",
    "imutils==0.5.4",
    "joblib==1.5.3",
    "kiwisolver==1.5.0",
    "llvmlite==0.44.0",
    "matplotlib==3.8.4",
    "numba==0.61.2",
    "numpy==1.26.4",
    "packaging==26.1",
    "pandas==2.2.3",
    "pillow==12.2.0",
    "pip==26.0.1",
    "psutil==7.0.0",
    "pyparsing==3.3.2",
    "python-dateutil==2.9.0.post0",
    "pytz==2026.1.post1",
    "pyyaml==6.0.2",
    "scikit-learn==1.5.1",
    "scipy==1.11.4",
    "setuptools==82.0.1",
    "six==1.17.0",
    "threadpoolctl==3.6.0",
    "tzdata==2026.1",
    "wheel==0.46.3",
]
